2010-02-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix bug with suspend and VT switch on VX800 and 64bit systems

	* src/via_driver.h:
	* src/via_video.c: (viaResetVideo), (viaSaveVideo),
	(viaRestoreVideo), (viaExitVideo):
	* src/via_video.h:

2010-01-24  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix starting address restore and save (initial 64-bit support)

	* src/via_crtc.c: (ViaFirstCRTCSetMode),
	(ViaFirstCRTCSetStartingAddress):
	* src/via_dri.c: (VIADRIAgpInit):
	* src/via_driver.c: (VIASave), (VIARestore):
	* src/via_driver.h:

2009-12-04  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Enable new mode switch for VM800 chipsets

	* src/via_driver.c: (VIASetupDefaultOptions):

2009-11-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Add option to enable unaccelerated RandR rotation ("SWRandR").
        The accelerated option "HWRandR" is currently not implemented.

	* src/openchrome.man:
	* src/via_driver.c: (VIAPreInit):

2009-11-20  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Enabled new mode switch for PM800 chipset, 
        to resolve many bugs with resolution detecting and changing
        (eg. switching to console)

	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):

2009-11-07  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Add more comments to ViaSetSecondaryFIFO, add panel scale support for 
 	CLE266 and KM400, fix bug with malloc.

	* src/via_bandwidth.c: (ViaSetSecondaryFIFO):
	* src/via_panel.c: (ViaPanelScale), (ViaPanelGetNativeDisplayMode):

2009-09-26  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Save/restore ECK Clock Synthesizer

	* src/via_driver.c: (VIASave), (VIARestore):
	* src/via_driver.h:

2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed bug with panel autodetection using
	ViaPanelGetNativeModeFromScratchPad function

	* src/via_panel.c:

2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed problem with backlite (Ticket #308)

	* src/via_lvds.c: (ViaLVDSSoftwarePowerFirstSequence),